# dodeca

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INVESTIGATION.md  README.md  dist-workspace.toml  knope.toml
.claude/: CLAUDE.md  settings.local.json
.claude/skills/analyze-rust-code-size/: FINDINGS-DDC.md
.config/: dodeca.kdl
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml
benches/: html_diff.rs
cells/cell-html/: Cargo.toml
cells/cell-html-proto/: Cargo.toml
cells/cell-http/: Cargo.toml
cells/cell-lifecycle-proto/: Cargo.toml
cells/cell-markdown/: Cargo.toml
cells/cell-markdown-proto/: Cargo.toml
crates/dodeca/: Cargo.toml  build.rs
crates/dodeca-cell-runtime/: Cargo.toml
crates/dodeca-debug/: Cargo.toml
crates/dodeca-mod-http/: Cargo.toml
crates/dodeca-pagefind/: Cargo.toml
crates/dodeca-serve-protocol/: Cargo.toml
crates/dodeca-syntax-highlight/: Cargo.toml
crates/livereload-client/: Cargo.toml
docs/: LIVERELOAD_DESIGN.md  LIVERELOAD_PLAN.md
docs/.config/: dodeca.kdl
docs/content/: _index.md
docs/templates/: base.html  page.html
drafts/mono/: FINAL-RESULTS.md  RESULTS.md
mods/mod-arborium/: Cargo.toml
mods/mod-arborium-proto/: Cargo.toml
mods/mod-http/: Cargo.toml
scripts/: assemble-archive.sh  build-target.sh  build-wasm.sh  release.sh
src/: cas.rs  config.rs  html_diff.rs  lib.rs  link_checker.rs  main.rs  queries.rs  render.rs  self_update.rs  serve.rs  tui.rs  types.rs  url_rewrite.rs
tests/: livereload_e2e.rs  serve_integration.rs
xtask/src/: ci.rs  main.rs
(+47 files in other folders)
