[package]
name = "dodeca-syntax-highlight"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Syntax highlighting plugin for dodeca using arborium/tree-sitter"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plugcard = { path = "../plugcard" }
facet = { git = "https://github.com/facet-rs/facet" }
linkme = "0.3"

# Syntax highlighting with tree-sitter
arborium = { version = "0.700", features = [
    "lang-bash",
    "lang-c",
    "lang-cpp",
    "lang-css",
    "lang-dockerfile",
    "lang-go",
    "lang-haskell",
    "lang-html",
    "lang-java",
    "lang-javascript",
    "lang-json",
    "lang-kdl",
    "lang-kotlin",
    "lang-lua",
    "lang-markdown",
    "lang-python",
    "lang-ruby",
    "lang-rust",
    "lang-scala",
    "lang-sql",
    "lang-swift",
    "lang-toml",
    "lang-typescript",
    "lang-yaml",
    "lang-zig",
] }
